--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8439,87 +8439,102 @@ span {
   transform: translate(0);
 }
 
-.cursor-outer {
-  -webkit-margin-start: -12px;
-  margin-inline-start: -12px;
-  margin-top: -12px;
-  width: 30px;
-  height: 30px;
-  border: 1px solid var(--gt-theme);
-  background-color: var(--gt-theme);
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  z-index: 10000000;
-  opacity: 0.34;
-  -webkit-transition: all 0.4s ease-out 0s;
-  transition: all 0.4s ease-out 0s;
+/* ===== Custom Cursor Styles for Desktop Only ===== */
+@media (hover: hover) and (pointer: fine) {
+  body {
+    cursor: none;
+  }
+
+  .mouseCursor {
+    display: block;
+  }
+
+  .cursor-outer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    margin-inline-start: -12px;
+    margin-top: -12px;
+    border: 1px solid var(--gt-theme);
+    background-color: var(--gt-theme);
+    box-sizing: border-box;
+    z-index: 10000000;
+    opacity: 0.34;
+    transition: all 0.4s ease-out;
+    border-radius: 50%;
+    will-change: transform;
+  }
+
+  .cursor-outer.cursor-hover {
+    opacity: 0.14;
+  }
+
+  .cursor-outer.cursor-big {
+    opacity: 0;
+  }
+
+  .cursor-inner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    margin-inline-start: -3px;
+    margin-top: -3px;
+    background-color: var(--gt-theme);
+    z-index: 10000001;
+    opacity: 1;
+    transition: all 0.24s ease-out;
+    border-radius: 50%;
+    will-change: transform;
+  }
+
+  .cursor-inner span {
+    color: var(--gt-text);
+    line-height: 60px;
+    opacity: 0;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 12px;
+    display: inline-block;
+  }
+
+  .cursor-inner.cursor-big span {
+    opacity: 1;
+  }
+
+  .cursor-inner.cursor-hover {
+    width: 30px;
+    height: 30px;
+    margin-inline-start: -10px;
+    margin-top: -10px;
+    background-color: var(--gt-theme);
+    border: 1px solid #686363;
+    opacity: 0;
+  }
+
+  .mouseCursor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    visibility: hidden;
+    text-align: center;
+    transform: translateZ(0);
+  }
 }
 
-.cursor-outer.cursor-hover {
-  opacity: 0.14;
+/* ===== Disable Custom Cursor on Touch Devices ===== */
+@media (hover: none) and (pointer: coarse) {
+  .mouseCursor {
+    display: none !important;
+  }
 }
 
-.cursor-outer.cursor-big {
-  opacity: 0;
-}
 
-.mouseCursor {
-  position: fixed;
-  top: 0;
-  inset-inline-start: 0;
-  inset-inline-end: 0;
-  bottom: 0;
-  pointer-events: none;
-  border-radius: 50%;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  visibility: hidden;
-  text-align: center;
-}
 
-.mouseCursor.cursor-big {
-  width: 20px;
-  height: 20px;
-  -webkit-margin-start: -12px;
-  margin-inline-start: -12px;
-  margin-top: -12px;
-}
-
-.cursor-inner {
-  -webkit-margin-start: -3px;
-  margin-inline-start: -3px;
-  margin-top: -3px;
-  width: 10px;
-  height: 10px;
-  z-index: 10000001;
-  background-color: var(--gt-theme);
-  opacity: 1;
-  -webkit-transition: all 0.24s ease-out 0s;
-  transition: all 0.24s ease-out 0s;
-}
-.cursor-inner span {
-  color: var(--gt-text);
-  line-height: 60px;
-  opacity: 0;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 12px;
-}
-
-.cursor-inner.cursor-big span {
-  opacity: 1;
-}
-
-.cursor-inner.cursor-hover {
-  -webkit-margin-start: -10px;
-  margin-inline-start: -10px;
-  margin-top: -10px;
-  width: 30px;
-  height: 30px;
-  background-color: var(--gt-theme);
-  border: 1px solid #686363;
-  opacity: 0;
-}
 
 .search-popup {
   position: fixed;
